--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,6 +69,20 @@
 
   </main>
 
+  <div class="modal fade" id="boostersModal" tabindex="-1" role="dialog" aria-labelledby="boostersModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="boostersModalLabel">Boosted by</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
 </body>
 
 {{> scripts}}
