--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,7 +78,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        
+        <ul class="list-group list-group-flush" id="boosters-list"></ul>
       </div>
     </div>
   </div>
