--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -5,17 +5,23 @@
         <article class="comment commentContainer" data-post-id="{{post._id}}">
           <div class="row">
             <div class="col commentContent">
-              {{#eq post.type "boost"}}
-                <p class="text-secondary">
-                  <i class="fas fa-retweet"></i> Boosted by <strong><a href="/{{post.owner}}" class="text-secondary">@{{post.owner}}</a></strong>
-                </p>
-              {{/eq}}
               {{#if post.recentlyCommented}}
                 {{#isnt post.lastCommentAuthor.username loggedInUserData.username}}
                   <p class="text-secondary">
                     <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{post.lastCommentAuthor.username}}" class="text-secondary">@{{post.lastCommentAuthor.username}}</a></strong>
                   </p>
                 {{/isnt}}
+              {{/if}}
+              {{#if followedBoosters}}
+              <p class="text-secondary">
+                <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
+              </p>
+              {{else}}
+              {{#if otherBoosters}}
+              <p class="text-secondary">
+                <i class="fas fa-retweet"></i> Boosted by {{otherBoosters.length}} {{plural otherBoosters 'people/person'}} <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>
+              </p>
+              {{/if}}
               {{/if}}
               {{#if post.community}}
                 <div class="text-secondary d-flex align-items-center mb-3">
