--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -13,12 +13,12 @@
           {{/if}}
           {{#if followedBoosters}}
           <p class="text-secondary">
-            <i class="far fa-comment"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}, {{/if}}{{/if}}<strong><a {{#eq this "you"}}{{else}}href="/{{this}}"{{/eq}} class="text-secondary">@{{this}}</a></strong>{{/each}}{{#if otherBoosters}}<a class="fullBoostList" data-html="true" data-content="others{{#unless isYourPost}} you follow{{/unless}}:&#10;{{#each otherBoosters}}@{{this}}{{#unless @last}}&#10;{{/unless}}{{/each}}">(...)</a>{{/if}}
+            <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
           </p>
           {{else}}
           {{#if otherBoosters}}
           <p class="text-secondary">
-            <a class="fullBoostList" data-html="true" data-content="others:&#10;{{#each otherBoosters}}@{{this}}{{#unless @last}}&#10;{{/unless}}{{/each}}">(...)</a>
+            <i class="fas fa-retweet"></i> Boosted by {{otherBoosters.length}} {{plural otherBoosters 'people/person'}} <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>
           </p>
           {{/if}}
           {{/if}}
@@ -212,10 +212,16 @@
               {{/isnt}}
             {{/if}}
             {{#if followedBoosters}}
-          <p class="text-secondary">
-            <i class="far fa-comment"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}, {{/if}}{{/if}}<strong><a {{#eq this "you"}}{{else}}href="/{{this}}"{{/eq}} class="text-secondary">@{{this}}</a></strong>{{/each}}{{#if otherBoosters}}<a class="fullBoostList" data-html="true" data-content="others{{#unless isYourPost}} you follow{{/unless}}:&#10;{{#each otherBoosters}}@{{this}}{{#unless @last}}&#10;{{/unless}}{{/each}}">(...)</a>{{/if}}
-          </p>
-          {{/if}}
+            <p class="text-secondary">
+              <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
+            </p>
+            {{else}}
+            {{#if otherBoosters}}
+            <p class="text-secondary">
+              <i class="fas fa-retweet"></i> Boosted by {{otherBoosters.length}} {{plural otherBoosters 'people/person'}} <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>
+            </p>
+            {{/if}}
+            {{/if}}
             {{#isnt ../context "community"}}
               <div class="text-secondary d-flex align-items-center mb-3">
                 <img alt="Display image for the community '{{this.community.name}}'" style="width:20px;height:20px;border-radius:2px;" class="postAuthorImage mr-1" src="/images/communities/{{#if this.community.imageEnabled}}{{this.community.image}}{{else}}cake.svg{{/if}}" />
@@ -385,10 +391,16 @@
                 {{/isnt}}
               {{/if}}
               {{#if followedBoosters}}
-          <p class="text-secondary">
-            <i class="far fa-comment"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}, {{/if}}{{/if}}<strong><a {{#eq this "you"}}{{else}}href="/{{this}}"{{/eq}} class="text-secondary">@{{this}}</a></strong>{{/each}}{{#if otherBoosters}}<a class="fullBoostList" data-html="true" data-content="others{{#unless isYourPost}} you follow{{/unless}}:&#10;{{#each otherBoosters}}@{{this}}{{#unless @last}}&#10;{{/unless}}{{/each}}">(...)</a>{{/if}}
-          </p>
-          {{/if}}
+              <p class="text-secondary">
+                <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
+              </p>
+              {{else}}
+              {{#if otherBoosters}}
+              <p class="text-secondary">
+                <i class="fas fa-retweet"></i> Boosted by {{otherBoosters.length}} {{plural otherBoosters 'people/person'}} <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>
+              </p>
+              {{/if}}
+              {{/if}}
               <div class="mb-3 d-flex">
                 <img alt="Profile image of @{{this.author.username}}" class="postAuthorImage" src="/images/{{#if this.author.imageEnabled}}{{this.author.image}}{{else}}cake.svg{{/if}}" />
                 <div class="post-header">
