--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -6,14 +6,14 @@
         <div class="col commentContent">
           {{#if this.recentlyCommented}}
             {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-              <p class="text-secondary">
+              <p class="text-secondary recently-commented-alert">
                 <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
               </p>
             {{/isnt}}
           {{/if}}
-          {{#if headerBoosters}}
+          {{#if followedBoosters}}
           <p class="text-secondary">
-            <i class="fas fa-retweet"></i> Boosted by {{#each headerBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}{{#gt followedBoosters.length 3}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/gt}}
+            <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
           </p>
           {{else}}
           {{#if otherBoosters}}
@@ -115,14 +115,7 @@
               {{#if ../loggedIn}}
                 <form class="d-inline" action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}" method="post">
                   <button type="submit" class="btn btn-link btn-sm boostPost  post-action-button">
-                    {{#if youBoosted}}
-                    <span class="fa-stack">
-                      <i class="fas fa-stack-1x fa-retweet"></i>
-                      <i class="fa-stack-1x fa-sm fas fa-slash fa-flip-horizontal fa-transform"></i>
-                    </span>
-                    {{else}}
                     <i class="fas fa-retweet"></i>
-                    {{/if}}
                   </button>
                 </form>
               {{/if}}
@@ -213,7 +206,7 @@
           <div class="col commentContent">
             {{#if this.recentlyCommented}}
               {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-                <p class="text-secondary">
+                <p class="text-secondary recently-commented-alert">
                   <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
                 </p>
               {{/isnt}}
@@ -392,7 +385,7 @@
             <div class="col commentContent">
               {{#if this.recentlyCommented}}
                 {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-                  <p class="text-secondary">
+                  <p class="text-secondary recently-commented-alert">
                     <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
                   </p>
                 {{/isnt}}
