--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -180,13 +180,12 @@ $(function() {
             divToDelete.remove();
           });
         });
-        let counterToChange = element.closest(".commentContainer").find(".openReplyBox")[0];
-        let regex = /\s|[(-)]/gi;
-        let newCommentCount = parseInt(counterToChange.textContent.replace(regex,""))-1;
+        let counterToChange = element.closest(".commentContainer").find(".openReplyBox").find(".comments-number")[0];
+        let newCommentCount = parseInt(counterToChange.textContent)-1;
         if(newCommentCount!=0){
-          counterToChange.innerHTML = counterToChange.innerHTML.replace("(" + (newCommentCount+1) + ")", "(" + (newCommentCount) + ")");
+          counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount+1), newCommentCount);
         }else{
-          counterToChange.innerHTML = counterToChange.innerHTML.replace("(" + (newCommentCount+1) + ")","");
+          counterToChange.innerHTML = counterToChange.innerHTML.replace( (newCommentCount+1),"");
         }
       }
     });
@@ -239,13 +238,12 @@ $(function() {
           html+='</div></div>';
           $(html).hide().appendTo(commentsContainer).fadeIn();
           commentButton.prop('disabled', false);
-          let counterToChange = commentButton.closest(".commentContainer").find(".openReplyBox")[0];
-          let regex = /\s|[(-)]/gi;
-          if(counterToChange.textContent.replace(regex,"") === ""){
-            counterToChange.innerHTML = counterToChange.innerHTML + " (1)";
+          let counterToChange = commentButton.closest(".commentContainer").find(".openReplyBox").find('.comments-number')[0];
+          if(counterToChange.textContent === ""){
+            counterToChange.innerHTML = "1";
           }else{
-            let newCommentCount = parseInt(counterToChange.textContent.replace(regex,""))+1;
-            counterToChange.innerHTML = counterToChange.innerHTML.replace("(" + (newCommentCount-1) + ")", "(" + (newCommentCount) + ")");
+            let newCommentCount = parseInt(counterToChange.textContent)+1;
+            counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount-1), newCommentCount);
           }
           emojiWindow.hide();
           $(pc).children('.newimagecont').remove(); //removes all image preview windows
