not completely sure what i'm doing, maybe fix that?

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
 
   <script src="/js/html5sortable.min.js"></script>
 
-  <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+  <script src="/js/medium-editor.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
 
