--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -6,14 +6,14 @@
         <div class="col commentContent">
           {{#if this.recentlyCommented}}
             {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-              <p class="text-secondary recently-commented-alert">
+              <p class="text-secondary">
                 <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
               </p>
             {{/isnt}}
           {{/if}}
-          {{#if followedBoosters}}
+          {{#if headerBoosters}}
           <p class="text-secondary">
-            <i class="fas fa-retweet"></i> Boosted by {{#each followedBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}
+            <i class="fas fa-retweet"></i> Boosted by {{#each headerBoosters}}{{#unless @first}}{{#unless @last}}, {{/unless}}{{/unless}}{{#if @last}}{{#unless ../otherBoosters}}{{#if ../this.followedBoosters.[1]}} and {{/if}}{{/unless}}{{#if ../otherBoosters}}{{#unless @first}}, {{/unless}}{{/if}}{{/if}}<strong><a href="/{{#eq this 'you'}}{{../../loggedInUserData.username}}{{else}}{{this}}{{/eq}}" class="text-secondary">{{#eq this "you"}}{{else}}@{{/eq}}{{this}}</a></strong>{{/each}}{{#if otherBoosters}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/if}}{{#gt followedBoosters.length 3}} and others <button type="button" class="fullBoostList btn btn-secondary btn-sm" data-toggle="modal" data-target="#boostersModal" data-users='{"followedBoosters":[{{#each followedBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}],"otherBoosters":[{{#each otherBoosters}}"{{this}}"{{#unless @last}},{{/unless}}{{/each}}]}'>Show all</button>{{/gt}}
           </p>
           {{else}}
           {{#if otherBoosters}}
@@ -213,7 +213,7 @@
           <div class="col commentContent">
             {{#if this.recentlyCommented}}
               {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-                <p class="text-secondary recently-commented-alert">
+                <p class="text-secondary">
                   <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
                 </p>
               {{/isnt}}
@@ -392,7 +392,7 @@
             <div class="col commentContent">
               {{#if this.recentlyCommented}}
                 {{#isnt this.lastCommentAuthor.username ../loggedInUserData.username}}
-                  <p class="text-secondary recently-commented-alert">
+                  <p class="text-secondary">
                     <i class="far fa-comment"></i> Recently commented on by <strong><a href="/{{this.lastCommentAuthor.username}}" class="text-secondary">@{{this.lastCommentAuthor.username}}</a></strong>
                   </p>
                 {{/isnt}}
