--- a/public/css/style.css
+++ b/public/css/style.css
@@ -911,6 +911,8 @@ hr {
 @media (min-width: 576px) {
   #notificationsContainer {
       min-width: 360px;
+      max-height: 500px;
+      overflow-x: scroll;
   }
 }
 #notificationsList,
