Added some 'HTML' to the stats view and changed route to /admin/stats

--- a/views/systempost.handlebars
+++ b/views/systempost.handlebars
@@ -22,7 +22,7 @@
             </div>
             <div class="post-content ">
               {{#each this.postcontent}}
-              <p>{{this}}</p>
+              <p>{{{this}}}</p>
               {{/each}}
             </div>
           </div>
