--- a/public/css/style.css
+++ b/public/css/style.css
@@ -336,6 +336,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
 }
 
+.post-action-button:hover {
+    text-decoration: none;
+}
+
 #authorTools > button {
   text-align: right;
   padding-right: 0px;
